csrf token added

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,6 +14,7 @@
     <meta name="msapplication-TileColor" content="#2d89ef">
     <meta name="msapplication-config" content="{{ asset('/build/media/fav/browserconfig.xml') }}">
     <meta name="theme-color" content="#ffffff">
+    <meta name="csrf-token" content="{{ csrf_token('global_token') }}">
     <title>{% block title %}Tick-It - Finding support{% endblock %}</title>
     {%- block head -%}
     {%- endblock head -%}
